kubernetes/ingress_frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-proxy
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: "www.devopsfetish.xyz"
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: opentelemetry-demo-frontendproxy
              port:
                number: 8080
